Add friendlies and thug finals, border colors

--- a/src/overlay.html
+++ b/src/overlay.html
@@ -29,7 +29,7 @@
             align-items: center;
             margin-top: 50px;
             border-radius: 50px;
-            border: 1px solid #D8A528;
+            border: 1px solid #CCCCCC;
         }
         .player {
             display: flex;
@@ -84,18 +84,18 @@
         }
         #header {
             position: absolute;
-            top: 10px;
-            left: 10px;
-            padding: 10px;
-            width: 200px;
+            top: 45px;
+            left: 45px;
+            padding: 5px;
+            width: 150px;
             height: 50px;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            background: linear-gradient(to right, #3E1D66, #154C4F);
-            border-radius: 50px;
-            border: 1px solid #D8A528;
+            background: linear-gradient(to right, #9F2E0C, #AD7A02);
+            border-radius: 10px;
+            border: 1px solid #CCCCCC;
             font-weight: 400;
             font-size: 16px;
             line-height: 24px;
@@ -150,7 +150,9 @@
                 losersSemis: 'Losers Semis',
                 losersFinals: 'Losers Finals',
                 grandFinals: 'Grand Finals',
-                trueFinals: 'True Finals'
+                trueFinals: 'True Finals',
+                thugFinals: 'Thug Finals',
+                friendlies: 'Friendlies'
             };
             return rounds[roundValue] || roundValue;
         }
