--- a/src/overlay.html
+++ b/src/overlay.html
@@ -17,7 +17,6 @@
             font-family: "Roboto", sans-serif;
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
             align-items: center;
         }
         #scoreboard {
@@ -29,7 +28,22 @@
             align-items: center;
             margin-top: 50px;
             border-radius: 50px;
-            border: 1px solid #CCCCCC;
+            border: 1px solid #111111;
+        }
+        #header {
+            width: 33%;
+            height: 32px;
+            display: flex;
+            justify-content: space-between; 
+            align-items: center;
+            background: linear-gradient(to right, #3E1D66, #154C4F);
+            border-radius: 15px;
+            border: 1px solid #111111;
+            margin-top: -20px;
+            padding: 15px 10px 0px 10px;
+            z-index: -1;
+            font-size: 11px;
+            font-style: italic;
         }
         .player {
             display: flex;
@@ -75,50 +89,32 @@
             margin: 0px 10px;
         }
         #logo {
-            width: 150px;
-            height: 150px;
+            width: 180px;
+            height: 180px;
             position: absolute;
             top: 10px;
             left: 50%;
             transform: translateX(-50%);
         }
-        #header {
-            position: absolute;
-            top: 45px;
-            left: 45px;
-            padding: 5px;
-            width: 150px;
-            height: 50px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background: linear-gradient(to right, #9F2E0C, #AD7A02);
-            border-radius: 10px;
-            border: 1px solid #CCCCCC;
-            font-weight: 400;
-            font-size: 16px;
-            line-height: 24px;
-        }
     </style>
 </head>
 <body>
-    <div id="header">
-        <div id="round"></div>
-        <div id="bestOf"></div>
-    </div>
     <div id="scoreboard">
         <div id="p1" class="player">
             <div id="p1Score" class="score"></div>
             <img id="p1Char" class="char" src="">
-            <div id="p1Name" class="name"></div>
+            <div id="p1Name" the class="name"></div>
         </div>
         <img src="/images/sunset_smash.png" id="logo">
         <div id="p2" class="player">
             <div id="p2Name" class="name"></div>
             <img id="p2Char" class="char" src="">
-            <div id="p2Score" the class="score"></div>
+            <div id="p2Score" class="score"></div>
         </div>
+    </div>
+    <div id="header">
+        <div id="round"></div>
+        <div id="tournamentName"></div>
     </div>
     <script>
         function fetchData() {
@@ -133,8 +129,8 @@
                 document.getElementById('p2Char').src = `/images/stock_icons/${data.player2Char || "Random"}/${data.player2Char || "Random"} (1).png`;
                 const roundLabel = formatRound(data.round);
                 const roundDisplay = roundLabel + (data.roundNumber ? " " + data.roundNumber : "");
-                document.getElementById('round').textContent = roundDisplay;
-                document.getElementById('bestOf').textContent = "Best of " + data.bestOf;
+                document.getElementById('round').textContent = roundDisplay + (data.bestOf ? ` (Bo${data.bestOf})` : "");
+                document.getElementById('tournamentName').textContent = "Sunset Smash #8";
             })
             .catch(error => console.error('Error fetching data:', error));
         }
